<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuHomeIcon"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item android:id="@+id/menuHelp"
        android:icon="@drawable/help49"
        android:title="@string/help_song"
        app:showAsAction="always"/>

    <item android:id="@+id/menuSongster"
        android:icon="@drawable/song"
        android:title="@string/song"
        app:showAsAction="always"/>

    <item android:id="@+id/menuTrivia"
        android:title="@string/triviaTitle"
        app:showAsAction="never"/>
    <!--    <item android:id="@+id/menuSongster"-->
    <!--        android:title="@string/songTitle"-->
    <!--        app:showAsAction="never"/>-->
    <item android:id="@+id/menuCarDB"
        android:title="@string/carTitle"
        app:showAsAction="never"/>
    <item android:id="@+id/menuSoccer"
        android:title="@string/soccerTitle"
        app:showAsAction="never"/>
    
    <item android:id="@+id/menuAbout"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>