<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carTitle"
        android:textStyle="bold"
        android:id="@+id/carTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carAuthor"
        android:textStyle="bold"
        android:id="@+id/carAuthor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carVersion"
        android:textStyle="bold"
        android:id="@+id/carVersion"/>

</LinearLayout>