<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/triviaActivityTitle"
        android:textColor="#673AB7"
        android:textStyle="bold"
        android:id="@+id/triviaActivityTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/triviaActivityAuthor"
        android:textColor="#673AB7"
        android:textStyle="bold"
        android:id="@+id/triviaActivityAuthor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/triviaActivityVersion"
        android:textColor="#673AB7"
        android:textStyle="bold"
        android:id="@+id/triviaActivityVersion"/>

</LinearLayout>