<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragmentSong">

    <RelativeLayout
        android:id="@+id/frame_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_song_info"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/songInfo"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/fragment_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID= "
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/fragment_song_info"/>

<!--        <TextView-->
<!--            android:id="@+id/fragment_Name"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/fragment_id"-->
<!--            android:text="@string/artistName"-->
<!--            android:textSize="15dp"-->
<!--            android:textStyle="bold"-->
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_id"
            android:text="@string/titleSong"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/fragment_songId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_title"
            android:text="@string/songId"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/fragment_artistId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_songId"
            android:text="@string/artistId"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/fragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/hide" />

    </RelativeLayout>

</FrameLayout>