<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_marginHorizontal="40sp"
    android:layout_marginVertical="268sp"
    tools:context=".TriviaAnswerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/correctAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/answer1"/>

    <Button
        android:id="@+id/incorrectAnswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/answer2"
        android:layout_below="@+id/correctAnswer"/>

    <Button
        android:id="@+id/incorrectAnswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/answer4"
        android:layout_below="@id/incorrectAnswer1"/>

    <Button
        android:id="@+id/incorrectAnswer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/answer4"
        android:layout_below="@id/incorrectAnswer2"/>

    </RelativeLayout>
</FrameLayout>